--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,8 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    constant = \n",
-    "    exponent\n",
+    "    exponent = \n",
+    "    s\n",
     "    "
    ]
   },
