--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
     "def output_at(list_of_terms, x_value):\n",
     "    constant = \n",
     "    exponent = \n",
-    "    s\n",
+    "    sum()\n",
     "    "
    ]
   },
