--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    constant = \n",
+    "    for i in liconstant = \n",
     "    exponent = \n",
     "    sum()\n",
     "    "
