automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,8 +188,9 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    for i in list_of_terms:\n",
-    "        constant = i\n",
-    "        exponent = \n",
+    "        constant = i[0]\n",
+    "        exponent = i[1]\n",
+    "        \n",
     "    sum()\n",
     "    "
    ]
