--- a/index.ipynb
+++ b/index.ipynb
@@ -191,6 +191,7 @@
     "    for i in list_of_terms:\n",
     "        constant = i[0]\n",
     "        exponent = i[1]\n",
+    "        output.append()\n",
     "    return sum()\n",
     "    "
    ]
