--- a/index.ipynb
+++ b/index.ipynb
@@ -187,10 +187,8 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output = []\n",
-    "    for i in list_of_terms:\n",
-    "        constant = i[0]\n",
-    "        exponent = i[1]\n",
+    "    output = [term_output f]\n",
+    "\n",
     "        \n",
     "    return sum()\n",
     "    "
