--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output = [term_output f]\n",
+    "    output = [term_output for term in list_of_terms]\n",
     "\n",
     "        \n",
     "    return sum()\n",
