automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,8 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    output = [term_output(list) for term in list_of_terms]\n",
-    "\n",
+    "    output = [term_output(term, x_value) for term in list_of_terms]\n",
     "        \n",
     "    return sum()\n",
     "    "
