--- a/index.ipynb
+++ b/index.ipynb
@@ -194,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "54"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "output_at(three_x_squared_minus_eleven, 2) # 1 \n",
-    "# output_at(three_x_squared_minus_eleven, 3) # 16"
+    "output_at(three_x_squared_minus_eleven, 3) # 16"
    ]
   },
   {
