automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,6 +188,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "    outputs = [term_output(term, x_value) for term in list_of_terms]\n",
+    "    list(map(lambda t))\n",
     "    return sum(outputs)\n",
     "    "
    ]
