automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,13 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-40b129f3a722>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-40b129f3a722>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return sum(outputs)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    outputs = [term_output(term, x_value) for term in list_of_terms]\n",
-    "    list(map(lambda term: term_output(term, x_value), list_o)\n",
+    "#     outputs = [term_output(term, x_value) for term in list_of_terms]\n",
+    "    list(map(lambda term: term_output(term, x_value), list_of_terms)\n",
     "    return sum(outputs)\n",
     "    "
    ]
