--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "#     outputs = [term_output(term, x_value) for term in list_of_terms]\n",
-    "    list(map(lambda term: term_output(term, x_value), list_of_terms)\n",
+    "    oulist(map(lambda term: term_output(term, x_value), list_of_terms)\n",
     "    return sum(outputs)\n",
     "    "
    ]
