--- a/index.ipynb
+++ b/index.ipynb
@@ -182,22 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-40b129f3a722>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-15-a4397aafaf11>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-40b129f3a722>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return sum(outputs)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-a4397aafaf11>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return sum(outputs)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "#     outputs = [term_output(term, x_value) for term in list_of_terms]\n",
-    "    oulist(map(lambda term: term_output(term, x_value), list_of_terms)\n",
+    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms)\n",
     "    return sum(outputs)\n",
     "    "
    ]
