--- a/index.ipynb
+++ b/index.ipynb
@@ -182,28 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-a4397aafaf11>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-a4397aafaf11>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return sum(outputs)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "#     outputs = [term_output(term, x_value) for term in list_of_terms]\n",
-    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms)\n",
+    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
+    "    return sum(outputs)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +204,7 @@
        "54"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
