--- a/index.ipynb
+++ b/index.ipynb
@@ -223,11 +223,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "0ec7cc10-cb1a-11e8-b44c-0242ac110033",
+         "x": [
+          -30,
+          -29,
+          -28,
+          -27,
+          -26,
+          -25,
+          -24,
+          -23,
+          -22,
+          -21,
+          -20,
+          -19,
+          -18,
+          -17,
+          -16,
+          -15,
+          -14,
+          -13,
+          -12,
+          -11,
+          -10,
+          -9,
+          -8,
+          -7,
+          -6,
+          -5,
+          -4,
+          -3,
+          -2,
+          -1,
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          12,
+          13,
+          14,
+          15,
+          16,
+          17,
+          18,
+          19,
+          20,
+          21,
+          22,
+          23,
+          24,
+          25,
+          26,
+          27,
+          28,
+          29
+         ],
+         "y": [
+          5400,
+          5046,
+          4704,
+          4374,
+          4056,
+          3750,
+          3456,
+          3174,
+          2904,
+          2646,
+          2400,
+          2166,
+          1944,
+          1734,
+          1536,
+          1350,
+          1176,
+          1014,
+          864,
+          726,
+          600,
+          486,
+          384,
+          294,
+          216,
+          150,
+          96,
+          54,
+          24,
+          6,
+          0,
+          6,
+          24,
+          54,
+          96,
+          150,
+          216,
+          294,
+          384,
+          486,
+          600,
+          726,
+          864,
+          1014,
+          1176,
+          1350,
+          1536,
+          1734,
+          1944,
+          2166,
+          2400,
+          2646,
+          2904,
+          3174,
+          3456,
+          3750,
+          4056,
+          4374,
+          4704,
+          5046
+         ]
+        }
+       ],
+       "layout": {
+        "title": "3x^2 - 11"
+       }
+      },
+      "text/html": [
+       "<div id=\"5848690c-caeb-41cc-bfc8-085269fb2d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5848690c-caeb-41cc-bfc8-085269fb2d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [5400, 5046, 4704, 4374, 4056, 3750, 3456, 3174, 2904, 2646, 2400, 2166, 1944, 1734, 1536, 1350, 1176, 1014, 864, 726, 600, 486, 384, 294, 216, 150, 96, 54, 24, 6, 0, 6, 24, 54, 96, 150, 216, 294, 384, 486, 600, 726, 864, 1014, 1176, 1350, 1536, 1734, 1944, 2166, 2400, 2646, 2904, 3174, 3456, 3750, 4056, 4374, 4704, 5046], \"type\": \"scatter\", \"uid\": \"0ef10b52-cb1a-11e8-b44c-0242ac110033\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"5848690c-caeb-41cc-bfc8-085269fb2d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5848690c-caeb-41cc-bfc8-085269fb2d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [5400, 5046, 4704, 4374, 4056, 3750, 3456, 3174, 2904, 2646, 2400, 2166, 1944, 1734, 1536, 1350, 1176, 1014, 864, 726, 600, 486, 384, 294, 216, 150, 96, 54, 24, 6, 0, 6, 24, 54, 96, 150, 216, 294, 384, 486, 600, 726, 864, 1014, 1176, 1350, 1536, 1734, 1944, 2166, 2400, 2646, 2904, 3174, 3456, 3750, 4056, 4374, 4704, 5046], \"type\": \"scatter\", \"uid\": \"0ef10b52-cb1a-11e8-b44c-0242ac110033\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
@@ -238,7 +401,7 @@
     "x_values = list(range(-30, 30, 1))\n",
     "y_values = list(map(lambda x: output_at(three_x_squared_minus_eleven, x),x_values))\n",
     "\n",
-    "three_x_squared_minus_eleven_trace  = trace_values(x_values, y_values, mode = 'line')\n",
+    "three_x_squared_minus_eleven_trace  = trace_values(x_values, y_values, mode = 'lines')\n",
     "plot([three_x_squared_minus_eleven_trace], {'title': '3x^2 - 11'})"
    ]
   },
