--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "def term_output(term, input_value):\n",
-    "    return 3 * input_value**2"
+    "    term[0]*input_value**term[1]"
    ]
   },
   {
