--- a/index.ipynb
+++ b/index.ipynb
@@ -133,19 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_output(term, input_value):\n",
-    "    term[0]*input_value**term[1]"
+    "    return term[0]*input_value**term[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "term_output((3, 2), 2) # 12"
    ]
@@ -176,7 +187,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    outputs = [term_output]\n",
+    "    outputs = [term_output(term,)]\n",
     "    return sum(outputs)\n",
     "    "
    ]
