--- a/index.ipynb
+++ b/index.ipynb
@@ -182,28 +182,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    outputs = [term_output(term, x_value) for term in list_of]\n",
+    "    outputs = [term_output(term, x_value) for term in list_of_terms]\n",
     "    return sum(outputs)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54"
+       "16"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -249,7 +249,7 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "0ec7cc10-cb1a-11e8-b44c-0242ac110033",
+         "uid": "46a3b91e-cb1a-11e8-b44c-0242ac110033",
          "x": [
           -30,
           -29,
@@ -313,66 +313,66 @@
           29
          ],
          "y": [
-          5400,
-          5046,
-          4704,
-          4374,
-          4056,
-          3750,
-          3456,
-          3174,
-          2904,
-          2646,
-          2400,
-          2166,
-          1944,
-          1734,
-          1536,
-          1350,
-          1176,
-          1014,
-          864,
-          726,
-          600,
-          486,
-          384,
-          294,
-          216,
-          150,
-          96,
-          54,
-          24,
-          6,
-          0,
-          6,
-          24,
-          54,
-          96,
-          150,
-          216,
-          294,
-          384,
-          486,
-          600,
-          726,
-          864,
-          1014,
-          1176,
-          1350,
-          1536,
-          1734,
-          1944,
-          2166,
-          2400,
-          2646,
-          2904,
-          3174,
-          3456,
-          3750,
-          4056,
-          4374,
-          4704,
-          5046
+          2689,
+          2512,
+          2341,
+          2176,
+          2017,
+          1864,
+          1717,
+          1576,
+          1441,
+          1312,
+          1189,
+          1072,
+          961,
+          856,
+          757,
+          664,
+          577,
+          496,
+          421,
+          352,
+          289,
+          232,
+          181,
+          136,
+          97,
+          64,
+          37,
+          16,
+          1,
+          -8,
+          -11,
+          -8,
+          1,
+          16,
+          37,
+          64,
+          97,
+          136,
+          181,
+          232,
+          289,
+          352,
+          421,
+          496,
+          577,
+          664,
+          757,
+          856,
+          961,
+          1072,
+          1189,
+          1312,
+          1441,
+          1576,
+          1717,
+          1864,
+          2017,
+          2176,
+          2341,
+          2512
          ]
         }
        ],
@@ -381,10 +381,10 @@
        }
       },
       "text/html": [
-       "<div id=\"5848690c-caeb-41cc-bfc8-085269fb2d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5848690c-caeb-41cc-bfc8-085269fb2d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [5400, 5046, 4704, 4374, 4056, 3750, 3456, 3174, 2904, 2646, 2400, 2166, 1944, 1734, 1536, 1350, 1176, 1014, 864, 726, 600, 486, 384, 294, 216, 150, 96, 54, 24, 6, 0, 6, 24, 54, 96, 150, 216, 294, 384, 486, 600, 726, 864, 1014, 1176, 1350, 1536, 1734, 1944, 2166, 2400, 2646, 2904, 3174, 3456, 3750, 4056, 4374, 4704, 5046], \"type\": \"scatter\", \"uid\": \"0ef10b52-cb1a-11e8-b44c-0242ac110033\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3867a128-5806-4a15-947b-6cf5d7cb4275\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3867a128-5806-4a15-947b-6cf5d7cb4275\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2689, 2512, 2341, 2176, 2017, 1864, 1717, 1576, 1441, 1312, 1189, 1072, 961, 856, 757, 664, 577, 496, 421, 352, 289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232, 289, 352, 421, 496, 577, 664, 757, 856, 961, 1072, 1189, 1312, 1441, 1576, 1717, 1864, 2017, 2176, 2341, 2512], \"type\": \"scatter\", \"uid\": \"46a87b34-cb1a-11e8-b44c-0242ac110033\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"5848690c-caeb-41cc-bfc8-085269fb2d0c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5848690c-caeb-41cc-bfc8-085269fb2d0c\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [5400, 5046, 4704, 4374, 4056, 3750, 3456, 3174, 2904, 2646, 2400, 2166, 1944, 1734, 1536, 1350, 1176, 1014, 864, 726, 600, 486, 384, 294, 216, 150, 96, 54, 24, 6, 0, 6, 24, 54, 96, 150, 216, 294, 384, 486, 600, 726, 864, 1014, 1176, 1350, 1536, 1734, 1944, 2166, 2400, 2646, 2904, 3174, 3456, 3750, 4056, 4374, 4704, 5046], \"type\": \"scatter\", \"uid\": \"0ef10b52-cb1a-11e8-b44c-0242ac110033\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3867a128-5806-4a15-947b-6cf5d7cb4275\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3867a128-5806-4a15-947b-6cf5d7cb4275\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2689, 2512, 2341, 2176, 2017, 1864, 1717, 1576, 1441, 1312, 1189, 1072, 961, 856, 757, 664, 577, 496, 421, 352, 289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232, 289, 352, 421, 496, 577, 664, 757, 856, 961, 1072, 1189, 1312, 1441, 1576, 1717, 1864, 2017, 2176, 2341, 2512], \"type\": \"scatter\", \"uid\": \"46a87b34-cb1a-11e8-b44c-0242ac110033\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
