automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -550,7 +550,7 @@
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    output_at(term, x_value)\n",
-    "    output_at(term, )"
+    "    output_at(term, x_value +)"
    ]
   },
   {
