--- a/index.ipynb
+++ b/index.ipynb
@@ -549,8 +549,8 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    fx = output_at(term, x_value)\n",
-    "    output_at(term, x_value + delta_x)\n",
+    "    fdeltax = output_at(term, x_value)\n",
+    "    fx = output_at(term, x_value + delta_x)\n",
     "    "
    ]
   },
