automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    fx = output_at(term, x_value)\n",
     "    fdeltax = output_at(term, x_value + delta_x)\n",
-    "    \n",
+    "    return fdeltax-\n",
     "    "
    ]
   },
