--- a/index.ipynb
+++ b/index.ipynb
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,14 +597,14 @@
     "    delta_f_value = delta_f(list_of_terms, x_value, delta_x)\n",
     "    if initial_f_value and delta_f_value:\n",
     "        trace =  trace_values(x_values=[x_value + delta_x, x_value + delta_x], \n",
-    "                              y_values=[initial_f_value, initial_f_value + delta_f_value], mode = 'line',\n",
+    "                              y_values=[initial_f_value, initial_f_value + delta_f_value], mode = 'lines',\n",
     "                              name = 'delta f = ' + str(delta_x))\n",
     "        return trace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
     "    initial_f_value = output_at(list_of_terms, x_value)\n",
     "    if initial_f_value:\n",
     "        trace = trace_values(x_values=[x_value, x_value + delta_x],\n",
-    "                            y_values=[initial_f_value, initial_f_value], mode = 'line', \n",
+    "                            y_values=[initial_f_value, initial_f_value], mode = 'lines', \n",
     "                            name = 'delta x = ' + str(delta_x))\n",
     "        return trace"
    ]
